refactor: update vars in locale files

--- a/config/languages/en.json
+++ b/config/languages/en.json
@@ -11,20 +11,20 @@
       "description": "View the server information",
       "generalLabel": "General",
       "guildName": "Name: {{guildName}}",
-      "owner": "Owner: {{ownerId}}",
+      "owner": "Owner: <@{{ownerId}}>",
       "createdAt": "Created at: {{guildCreatedAt}}",
       "guildDescription": "Description: {{guildDescription}}",
-      "totalGuildMembersCount": "Members [ {{memberCount}} ]",
-      "guildMembersCount": "Users: {{guildMembers}}",
-      "guildBotsCount": "Bots: {{botsNumber}}",
+      "totalMembersCount": "Members [ {{memberCount}} ]",
+      "guildMembersCount": "Users: {{guildMembersCount}}",
+      "guildBotsCount": "Bots: {{botMembersCount}}",
       "totalChannelsCount": "Channels [ {{guildChannels}} ]",
-      "guildTextChannelsCount": "Text: {{textChannels}}",
-      "guildVoiceChannelsCount": "Voice: {{voiceChannels}}",
-      "guildCategoriesCount": "Categories: {{guildCategories}}",
-      "totlaEmojisCount": "Emojis [ {{emojiCount}} ]",
-      "animatedEmojisCount": "Animate: {{emojisAnimate}}",
-      "staticEmojisCount": "Static: {{emojisStatic}}",
-      "rolesCount": "Roles [ {{guildRolesLength}} ]"
+      "textChannelsCount": "Text: {{textChannels}}",
+      "voiceChannelsCount": "Voice: {{voiceChannels}}",
+      "categoriesCount": "Categories: {{guildCategories}}",
+      "totalEmojisCount": "Emojis [ {{totalEmojisCount}} ]",
+      "animatedEmojisCount": "Animate: {{animatedEmojisCount}}",
+      "staticEmojisCount": "Static: {{staticEmojisCount}}",
+      "guildRolesCount": "Roles [ {{guildRolesCount}} ]"
     },
     "userInfo": {
       "name": "userinfo",
@@ -32,10 +32,10 @@
       "userOption": "Users",
       "title": "About User",
       "createdAt": "Created",
-      "createdTime": "{{createdAt}}",
+      "createdTime": "{{userCreatedAt}}",
       "statusLabel": "Status",
       "userStatus": "{{statusList}}",
-      "badges": "{{userBadges}}",
+      "badges": "{{userBadgesList}}",
       "joinedAt": "Joined",
       "joinedTime": "{{memberJoinedTime}}",
       "memberRoles": "Roles",
@@ -49,7 +49,7 @@
       "name": "welcomechannel",
       "editedChannel": "Welcome channel was changed at <#{{channelId}}>",
       "installedChannel": "Welcome channel was set at <#{{channelId}}>. To disable run /welcomechannel disable",
-      "noChannel": "{{warning}} Channel has not been set yet",
+      "noChannel": "{{warningEmoji}} Channel has not been set yet",
       "deletedChannel": "Welcome channel was deleted",
       "selectWelcomeChannel": "Select channel for welcome message",
       "setupChannel": "Setup channel for welcome message",
@@ -60,7 +60,7 @@
       "name": "leavechannel",
       "editedChannel": "Leave channel was changed at <#{{channelId}}>",
       "installedChannel": "Leave channel was set at <#{{channelId}}>. To disabled run /leavechannel disable",
-      "noChannel": "{{warning}} Channel has not been set yet",
+      "noChannel": "{{warningEmoji}} Channel has not been set yet",
       "deletedChannel": "Leave channel was deleted",
       "selectLeaveChannel": "Select channel for leave message",
       "setupChannel": "Setup channel for leave message",
@@ -71,7 +71,7 @@
       "name": "logchannel",
       "editedChannel": "Log channel was changed at <#{{channelId}}>",
       "installedChannel": "Log channel was set at <#{{channelId}}>. To disable run /logchannel disable",
-      "noChannel": "{{warning}} Channel has not been set yet",
+      "noChannel": "{{warningEmoji}} Channel has not been set yet",
       "deletedChannel": "Log channel was deleted",
       "selectLogChannel": "Select channel for log message",
       "setupChannel": "Setup channel for log message",
