--- a/config/languages/ru.json
+++ b/config/languages/ru.json
@@ -12,27 +12,27 @@
       "owner": "Создатель: <@{{ownerId}}>",
       "createdAt": "Cоздан: {{guildCreatedAt}}",
       "guildDescription": "Описание: {{guildDescription}}",
-      "totalGuildMembersCount": "Участники [ {{memberCount}} ]",
-      "guildMembersCount": "Пользователи: {{guildMembers}}",
-      "guildBotsCount": "Боты: {{botsNumber}}",
+      "totalMembersCount": "Участники [ {{memberCount}} ]",
+      "guildMembersCount": "Пользователи: {{guildMembersCount}}",
+      "guildBotsCount": "Боты: {{botMembersCount}}",
       "totalChannelsCount": "Каналы [ {{guildChannels}} ]",
-      "guildTextChannelsCount": "Текстовые: {{textChannels}}",
-      "guildVoiceChannelsCount": "Голосовые: {{voiceChannels}}",
-      "guildCategoriesCount": "Категории: {{guildCategories}}",
-      "totlaEmojisCount": "Эмодзи [ {{emojiCount}} ]",
-      "animatedEmojisCount": "Анимированные: {{emojisAnimate}}",
-      "staticEmojisCount": "Статичные: {{emojisStatic}}",
-      "rolesCount": "Роли [ {{guildRolesLength}} ]"
+      "textChannelsCount": "Текстовые: {{textChannels}}",
+      "voiceChannelsCount": "Голосовые: {{voiceChannels}}",
+      "categoriesCount": "Категории: {{guildCategories}}",
+      "totalEmojisCount": "Эмодзи [ {{totalEmojisCount}} ]",
+      "animatedEmojisCount": "Анимированные: {{animatedEmojisCount}}",
+      "staticEmojisCount": "Статичные: {{staticEmojisCount}}",
+      "guildRolesCount": "Роли [ {{guildRolesCount}} ]"
     },
     "userInfo": {
       "description": "Показать информацию о пользователе",
       "userOption": "Пользователь",
       "title": "О Пользователе",
       "createdAt": "Создан",
-    "createdTime": "{{createdAt}}",
+      "createdTime": "{{userCreatedAt}}",
       "statusLabel": "Статус",
       "userStatus": "{{statusList}}",
-      "badges": "{{userBadges}}",
+      "badges": "{{userBadgesList}}",
       "joinedAt": "Вошёл",
       "joinedTime": "{{memberJoinedTime}}",
       "memberRoles": "Роли",
@@ -45,7 +45,7 @@
     "welcomeChannel": {
       "editedChannel": "Приветственный канал был изменён на <#{{channelId}}>",
       "installedChannel": "Приветственный канал был установлен на <#{{channelId}}>. Для отключения введите /welcomechannel disable",
-      "noChannel": "{{warning}} Канал ещё не установлен",
+      "noChannel": "{{warningEmoji}} Канал ещё не установлен",
       "deletedChannel": "Приветственный канал был удалён",
       "selectWelcomeChannel": "Выбери канал для приветственных сообщений",
       "setupChannel": "Установи канал для приветственных сообщений",
@@ -55,7 +55,7 @@
     "leaveChannel": {
       "editedChannel": "Прощальный канал был изменен на <#{{channelId}}>",
       "installedChannel": "Прощальный канал был установлен на <#{{channelId}}>. Для отключения введите /leavechannel disable",
-      "noChannel": "{{warning}} Канал ещё не установлен",
+      "noChannel": "{{warningEmoji}} Канал ещё не установлен",
       "deletedChannel": "Прощальный канал был удалён",
       "selectLeaveChannel": "Выбери канал для прощальных сообщений",
       "setupChannel": "Установи  канал для прощальных сообщений",
@@ -65,7 +65,7 @@
     "logChannel": {
       "editedChannel": "Канал для логов был изменён на <#{{channelId}}>",
       "installedChannel": "Канал для логов быз установлен на <#{{channelId}}>. Для отключения введите /logchannel disable",
-      "noChannel": "{{warning}} Канал ещё не установлен",
+      "noChannel": "{{warningEmoji}} Канал ещё не установлен",
       "deletedChannel": "Канал для логов был удалён",
       "selectLogChannel": "Выбери канал для логов",
       "setupChannel": "Установи канал для логов",
