--- a/config/languages/uk.json
+++ b/config/languages/uk.json
@@ -9,30 +9,30 @@
       "description": "Показати інформацію про сервер",
       "generalLabel": "Основне",
       "guildName": "Назва: {{guildName}}",
-      "owner": "Творець: {{ownerId}}",
+      "owner": "Творець: <@{{ownerId}}>",
       "createdAt": "Створений: {{guildCreatedAt}}",
       "guildDescription": "Опис: {{guildDescription}}",
-      "totalGuildMembersCount": "Учасники [ {{memberCount}} ]",
-      "guildMembersCount": "Користувачі: {{guildMembers}}",
-      "guildBotsCount": "Боти: {{botsNumber}}",
+      "totalMembersCount": "Учасники [ {{memberCount}} ]",
+      "guildMembersCount": "Користувачі: {{guildMembersCount}}",
+      "guildBotsCount": "Боти: {{botMembersCount}}",
       "totalChannelsCount": "Канали [ {{guildChannels}} ]",
-      "guildTextChannelsCount": "Текстові: {{textChannels}}",
-      "guildVoiceChannelsCount": "Голосові: {{voiceChannels}}",
-      "guildCategoriesCount": "Категорії: {{guildCategories}}",
-      "totlaEmojisCount": "Емодзі [ {{emojiCount}} ]",
-      "animatedEmojisCount": "Анімовані: {{emojisAnimate}}",
-      "staticEmojisCount": "Статичні: {{emojisStatic}}",
-      "rolesCount": "Ролі [ {{guildRolesLength}} ]"
+      "textChannelsCount": "Текстові: {{textChannels}}",
+      "voiceChannelsCount": "Голосові: {{voiceChannels}}",
+      "categoriesCount": "Категорії: {{guildCategories}}",
+      "totalEmojisCount": "Емодзі [ {{totalEmojisCount}} ]",
+      "animatedEmojisCount": "Анімовані: {{animatedEmojisCount}}",
+      "staticEmojisCount": "Статичні: {{staticEmojisCount}}",
+      "guildRolesCount": "Ролі [ {{guildRolesCount}} ]"
     },
     "userInfo": {
       "description": "Показати інформацію про користувача",
       "userOption": "Користувач",
       "title": "Про Користувача",
       "createdAt": "Створений",
-      "createdTime": "{{createdAt}}",
+      "createdTime": "{{userCreatedAt}}",
       "statusLabel": "Статус",
       "userStatus": "{{statusList}}",
-      "badges": "{{userBadges}}",
+      "badges": "{{userBadgesList}}",
       "joinedAt": "Увійшов",
       "joinedTime": "{{memberJoinedTime}}",
       "memberRoles": "Ролі",
@@ -45,7 +45,7 @@
     "welcomeChannel": {
       "editedChannel": "Привітальний канал було змінено на <#{{channelId}}>",
       "installedChannel": "Привітальний канал було встановлено на <#{{channelId}}>. Для відключення введіть /welcomechannel disable",
-      "noChannel": "{{warning}} Канал ще не встановлено",
+      "noChannel": "{{warningEmoji}} Канал ще не встановлено",
       "deletedChannel": "Привітальний канал було видалено",
       "selectWelcomeChannel": "Вибери канал для привітальних повідомлень",
       "setupChannel": "Встановіть канал для привітальних повідомлень",
@@ -55,7 +55,7 @@
     "leaveChannel": {
       "editedChannel": "Прощальний канал було змінено на <#{{channelId}}>",
       "installedChannel": "Прощальний канал було встановлено на <#{{channelId}}>. Для відключення введіть /leavechannel disable",
-      "noChannel": "{{warning}} Канал ще не встановлено",
+      "noChannel": "{{warningEmoji}} Канал ще не встановлено",
       "deletedChannel": "Прощальний канал було видалено",
       "selectLeaveChannel": "Вибери канал для прощальних повідомлень",
       "setupChannel": "Встановіть канал для прощальних повідомлень",
@@ -65,7 +65,7 @@
     "logChannel": {
       "editedChannel": "Канал для логів було змінено на <#{{channelId}}>",
       "installedChannel": "Канал для логів було встановлено на <#{{channelId}}>. Для відключення введіть /logchannel disable",
-      "noChannel": "{{warning}} Канал ще не встановлено",
+      "noChannel": "{{warningEmoji}} Канал ще не встановлено",
       "deletedChannel": "Канал для логів було видалено",
       "selectLogChannel": "Вибери канал для логів",
       "setupChannel": "Встановіть канал для логів",
