--- a/config/languages/ru.json
+++ b/config/languages/ru.json
@@ -62,6 +62,16 @@
 			"disableChannel": "Отключи канал для прощальных сообщений",
 			"channelOption": "Установи  канал для прощальных сообщений"
 		},
+		"joinToCreateChannel": {
+			"editedChannel": "\"Join To Create\" channel was changed at <#{{channelId}}>",
+			"installedChannel": "\"Join To Create\" channel was set at <#{{channelId}}>. To disabled run /jointocreate disable",
+			"noChannel": "{{warningEmoji}} Channel has not been set yet",
+			"deletedChannel": "\"Join To Create\" channel was deleted",
+			"selectJoinToCreateChannel": "Select \"Join To Create\"",
+			"setupChannel": "Setup \"Join To Create\" channel",
+			"disableChannel": "\"Join To Create\" channel",
+			"channelOption": "Setup \"Join To Create\" channel"
+		},
 		"logChannel": {
 			"editedChannel": "Канал для логов был изменён на <#{{channelId}}>",
 			"installedChannel": "Канал для логов быз установлен на <#{{channelId}}>. Для отключения введите /logchannel disable",
