--- a/config/languages/en.json
+++ b/config/languages/en.json
@@ -126,6 +126,40 @@
 					"label": "Detailed description of the problem",
 					"placeholder": "Please provide a detailed description of what is not working correctly in this command"
 				}
+			},
+			"setNameTempChannel": {
+				"title": "Change channel name",
+				"label": "Enter channel name",
+				"succesUpdateName": "Channel name updated successfully!"
+			},
+			"setLimitTempChannel": {
+				"title": "Change channel user limit",
+				"label": "Enter channel limit",
+				"errorLimit": "Please enter a valid user limit between 1 and 99",
+				"succesLimit": "User limit updated successfully!"
+			}
+		},
+		"menus": {
+			"tempChannel": {
+				"notCreate": "You cannot manage the channel!",
+				"name": {
+					"label": "Name",
+					"description": "Change the channel name"
+				},
+				"limit": {
+					"label": "Limit",
+					"description": "Change the channel limit"
+				},
+				"lockChannel": {
+					"label": "Lock",
+					"description": "Lock the channel",
+					"successLock": "Channel successfully locked"
+				},
+				"unlockChannel": {
+					"label": "Unlock",
+					"description": "Unlock the channel",
+					"successUnlock": "Channel successfully unlocked"
+				}
 			}
 		}
 	},
