--- a/config/languages/uk.json
+++ b/config/languages/uk.json
@@ -108,6 +108,40 @@
 					"label": "Детальний опис проблеми",
 					"placeholder": "Будь ласка, надайте докладний опис того, що некоректно працює в цій команді"
 				}
+			},
+			"setNameTempChannel": {
+				"title": "Изменить имя канала",
+				"label": "Ввести имя канала",
+				"succesUpdateName": "Channel name updated successfully!"
+			},
+			"setLimitTempChannel": {
+				"title": "Change channel user limit",
+				"label": "Enter channel limit",
+				"errorLimit": "Please enter a valid user limit between 1 and 99",
+				"succesLimit": "User limit updated successfully!"
+			}
+		},
+		"menus": {
+			"tempChannel": {
+				"noCreate": "Ты не можешь управлять каналом!",
+				"tempChannelName": {
+					"label": "Name",
+					"description": "Change the channel name"
+				},
+				"limit": {
+					"label": "Limit",
+					"description": "Change the channel limit"
+				},
+				"lockChannel": {
+					"label": "Lock",
+					"description": "Lock the channel",
+					"successLock": "Channel successfully locked"
+				},
+				"unlockChannel": {
+					"label": "Unlock",
+					"description": "Unlock the channel",
+					"successUnlock": "Channel successfully unlocked"
+				}
 			}
 		}
 	},
