--- a/config/languages/uk.json
+++ b/config/languages/uk.json
@@ -112,13 +112,15 @@
 			"setNameTempChannel": {
 				"title": "Изменить имя канала",
 				"label": "Ввести имя канала",
-				"succesUpdateName": "Channel name updated successfully!"
+				"succesUpdateName": "Channel name updated successfully!",
+				"nameRoomExample": "Talking"
 			},
 			"setLimitTempChannel": {
 				"title": "Change channel user limit",
 				"label": "Enter channel limit",
 				"errorLimit": "Please enter a valid user limit between 1 and 99",
-				"succesLimit": "User limit updated successfully!"
+				"succesLimit": "User limit updated successfully!",
+				"limitRoomExample": "0 for unlimited"
 			}
 		},
 		"menus": {
