update: locale vars

--- a/config/languages/en.json
+++ b/config/languages/en.json
@@ -19,10 +19,10 @@
 			"description": "View the server information",
 			"generalLabel": "General",
 			"guildName": "Name: {{guildName}}",
-			"owner": "Owner: <@{{ownerId}}>",
+			"ownerId": "Owner: <@{{ownerId}}>",
 			"createdAt": "Created at: {{guildCreatedAt}}",
 			"guildDescription": "Description: {{guildDescription}}",
-			"totalMembersCount": "Members [ {{memberCount}} ]",
+			"totalMembersCount": "Members [ {{totalMembersCount}} ]",
 			"guildMembersCount": "Users: {{guildMembersCount}}",
 			"guildBotsCount": "Bots: {{botMembersCount}}",
 			"totalChannelsCount": "Channels [ {{guildChannels}} ]",
