--- a/config/languages/ru.json
+++ b/config/languages/ru.json
@@ -9,10 +9,10 @@
 			"description": "Показать информацию о сервере",
 			"generalLabel": "Основное",
 			"guildName": "Название: {{guildName}}",
-			"owner": "Создатель: <@{{ownerId}}>",
+			"ownerId": "Создатель: <@{{ownerId}}>",
 			"createdAt": "Cоздан: {{guildCreatedAt}}",
 			"guildDescription": "Описание: {{guildDescription}}",
-			"totalMembersCount": "Участники [ {{memberCount}} ]",
+			"totalMembersCount": "Участники [ {{totalMembersCount}} ]",
 			"guildMembersCount": "Пользователи: {{guildMembersCount}}",
 			"guildBotsCount": "Боты: {{botMembersCount}}",
 			"totalChannelsCount": "Каналы [ {{guildChannels}} ]",
