--- a/config/languages/uk.json
+++ b/config/languages/uk.json
@@ -9,10 +9,10 @@
 			"description": "Показати інформацію про сервер",
 			"generalLabel": "Основне",
 			"guildName": "Назва: {{guildName}}",
-			"owner": "Творець: <@{{ownerId}}>",
+			"ownerId": "Творець: <@{{ownerId}}>",
 			"createdAt": "Створений: {{guildCreatedAt}}",
 			"guildDescription": "Опис: {{guildDescription}}",
-			"totalMembersCount": "Учасники [ {{memberCount}} ]",
+			"totalMembersCount": "Учасники [ {{totalMembersCount}} ]",
 			"guildMembersCount": "Користувачі: {{guildMembersCount}}",
 			"guildBotsCount": "Боти: {{botMembersCount}}",
 			"totalChannelsCount": "Канали [ {{guildChannels}} ]",
