--- a/config/languages/ru.json
+++ b/config/languages/ru.json
@@ -78,6 +78,7 @@
 		"messageLeaderboard": {
 			"description": "Топ сообщений",
 			"top10Messages": "Топ 10 участников по количеству сообщений",
+			"noTop": "На сервере ещё нет топа сообщений",
 			"fieldName": "Список:"
 		}
 	},
