add: embed for my server

--- a/config/languages/ru.json
+++ b/config/languages/ru.json
@@ -167,5 +167,48 @@
 		"errors": {
 			"errorCallCommand": "There was an error while executing this command! If this error continues, please contact us!"
 		}
+	},
+
+	"myServer": {
+		"embeds": {
+			"infoAboutServer": {
+				"title": "Добро пожаловать на наш сервер",
+				"description": "Здесь вы сможете не только отдохнуть и обсудить все насущные темы, но также пригласить друзей и поддержать создателя нашего бота, посмотрев его трансляции на Twitch.",
+				"fields": {
+					"links": "- [Присоединиться к серверу Discord](https://discord.gg/woiolife)\n- [Следить за трансляциями на Twitch](https://twitch.tv/drafwod)"
+				}
+			},
+			"serverRules": {
+				"politeEmbed": {
+					"title": "Будьте вежливы и уважительны",
+					"description": "Относитесь ко всем с уважением. Никакие домогательства, угрозы, оскорбления по расовому, национальному или сексуальному признаку недопустимы."
+				},
+				"noSpamEmbed": {
+					"title": "Никакого спама или рекламы",
+					"description": "Никакой рекламы (приглашения на сервер, ссылки на другие сайты и т.д.) без разрешения администраторов сервера."
+				},
+				"personalDataEmbed": {
+					"title": "Личные данные",
+					"description": "Никакого слива личных данных  одного пользователя другим пользователем. Если не было получено согласие."
+				},
+				"adultContentEmbed": {
+					"title": "18+ контент",
+					"description": "Для 18+ контента у нас на сервере имеется отдельный чат, где вы можете обсуждать темы непристойного характера без всяких ограничений: <#1031739471571451965>."
+				},
+				"streamingBehaviorEmbed": {
+					"title": "Поведение на стриме",
+					"description": "Никаких запрещённых слов, за которые стример может отлететь в бан. Это правило касается любого стрима, который проходит в настоящее время."
+				},
+				"reportToUsEmbed": {
+					"title": "Сообщите нам",
+					"description": "Если вы видите, что против вас ведутся действия, заставляющие чувствовать вас некомфортно, сообщите об этом персоналу сервера."
+				}
+			}
+		},
+		"buttons": {
+			"serverRules": {
+				"label": "Правила"
+			}
+		}
 	}
 }
